--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typesense": "^2.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
