--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.1",
+    "@primevue/forms": "^4.3.6",
+    "@tailwindcss/vite": "^4.1.11",
     "nuxt": "^3.17.7",
+    "primevue": "^4.3.6",
+    "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@primevue/nuxt-module": "^4.3.6"
   }
 }
