--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.11.1",
     "@primeuix/themes": "^1.2.1",
     "@primevue/forms": "^4.3.6",
     "@tailwindcss/vite": "^4.1.11",
     "nuxt": "^3.17.7",
+    "pinia": "^3.0.3",
     "primevue": "^4.3.6",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
