--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@primevue/nuxt-module": "^4.3.6"
+    "@primevue/nuxt-module": "^4.3.6",
+    "@types/node": "^24.0.14",
+    "typescript": "^5.8.3"
   }
 }
