--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,4 +1,14 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json"
+  "extends": "./.nuxt/tsconfig.json",
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",
+    "strict": true,
+    "noImplicitAny": true,
+    "moduleResolution": "node",
+    "types": ["@pinia/nuxt", "@types/node", "vue"],
+    "allowJs": true,
+    "checkJs": false
+  }
 }
