--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@pinia/nuxt": "^0.11.1",
     "@primeuix/themes": "^1.2.1",
     "@primevue/forms": "^4.3.6",
