--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "primevue": "^4.3.6",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@primevue/nuxt-module": "^4.3.6",
