--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@pinia/nuxt": "^0.11.1",
     "@primeuix/themes": "^1.2.1",
     "@primevue/forms": "^4.3.6",
+    "@supabase/supabase-js": "^2.52.0",
     "@tailwindcss/vite": "^4.1.11",
     "nuxt": "^3.17.7",
     "pinia": "^3.0.3",
