--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "multer": "^2.0.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "stripe": "^18.3.0",
     "typesense": "^2.0.3"
   },
   "devDependencies": {
